--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- navbar  -->
+    <!-- navbar start  -->
 
     <header>
       <div class="navbar bg-base-100 shadow-sm">
@@ -112,7 +112,9 @@
       </div>
     </header>
 
-    <!-- banner -->
+    <!-- navbar end  -->
+
+    <!-- banner start -->
 
     <section
       class="flex flex-col-reverse md:flex-row justify-between items-center gap-10 py-5 w-11/12 mx-auto"
@@ -172,6 +174,43 @@
       </div>
     </section>
 
-    <script src="./script.js"></script>
+    <!-- banner end  -->
+
+    <!-- start main -->
+
+    <main>
+      <!-- lesson section  start  -->
+
+      <section class="lesson">
+        <h2 class="text-4xl font-bold mb-8 text-center">
+          <span class="text-sky-400">Let's</span> Learn Vocabularies
+        </h2>
+
+        <div
+          id="level-container"
+          class="flex flex-wrap justify-center gap-5"
+        ></div>
+      </section>
+
+      <!-- lesson section end  -->
+
+     <!-- card section start -->
+<section  id="word-container"   class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
+
+    
+
+</section>
+
+
+     <!-- card section ens  -->
+
+
+
+
+
+    </main>
+
+    <script src="./script/script.js"></script>
+    <script src="./script/index.js"></script>
   </body>
 </html>
