handle empty words

--- a/index.html
+++ b/index.html
@@ -197,7 +197,11 @@
      <!-- card section start -->
 <section  id="word-container"   class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5">
 
-    
+    <div class="bg-sky-100 font-bangla text-center col-span-full rounded-xl py-10 space-y-6">
+      <p class="text-xl font-medium text-gray-400">আপনি এখনো কোন Lesson Select করেন নি</p>
+      <h2 class="text-4xl font-bold">একটি Lesson Select করুন।</h2>
+
+    </div>
 
 </section>
 
